# minirecoder

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.c  serial.c  serial.h
